update on favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FAVICON -->
     <link rel="icon" type="image/png"
-          href="https://img.freepik.com/vecteurs-libre/illustration-concept-questions_114360-3932.jpg?w=826&t=st=1706866338~exp=1706866938~hmac=6083804f3bbb650ce34dc294559cfb2eb240768c6fa2cd07ddbc81b97721570c"/>
+          href="./images/cloud-campus.png"/>
     <title>CV - Mamadou Dembele</title>
     <!-- GENERAL CSS -->
     <link rel="stylesheet" href="css/general.css">
