--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <h2 class="h2"> À l'attention de l'employeur</h2>
             <p class="detail-paragraph-2 text-center">
                 Suite à une première formation m'ayant permis d'acquérir des notions solides en tant que futur
-                développeur fullstack je veux pouvoir confronter ce que j'ai appris avec le monde de l'entreprise. <br>
-                Je tiens à préciser qu'il est important pour moi que la future entreprise qui souhaiterait
+                développeur fullstack je veux pouvoir confronter ce que j'ai appris avec le monde de l'entreprise. Je recherche donc une alternance en apprentissage en tant que développeur full stack.<br> Je tiens à préciser qu'il est important pour moi que la future entreprise qui souhaiterait
                 potentiellement m'apprendre le métier comprenne bien que je suis là pour acquérir des compétences ainsi
                 les offres pour du salariat déguisé ne m'intéresse
                 pas. <br> N'oubliez pas que
