--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12 col-xl-12" id="about-detail">
             <h2 class="h2"> Qui suis-je ?</h2>
-            <p class="detail-paragraph text-center">Je m’appelle Dembele Mamadou , ayant fraichement atteint le quart de
-                siècle sur terre...Pour le reste nous le verrons en entretien</p>
+            <p class="detail-paragraph text-center">Je m’appelle Dembele Mamadou , 25 ans...Pour le reste je vous laisse le loisir d'en savoir plus ci-dessous.</p>
             <h2 class="h2"> À l'attention de l'employeur</h2>
             <p class="detail-paragraph-2 text-center">
-                Suite à une première formation m'ayant permis d'acquérir des notions solides en tant que futur
-                développeur fullstack je veux pouvoir confronter ce que j'ai appris avec le monde de l'entreprise. Je recherche donc une alternance en apprentissage.<br> Je tiens à préciser qu'il est important pour moi que la future entreprise qui souhaiterait
-                potentiellement m'apprendre le métier comprenne bien que je suis là pour acquérir des compétences ainsi
-                les offres pour du salariat déguisée ne m'intéresse
-                pas. <br> N'oubliez pas que
-                l'alternance est un mode d'offre d'emploi
-                destiné à faire monter une personne en
-                compétence et qu'en tant que futur alternant dès lors que cette possibilité m'est offerte je ferais le
-                nécessaire pour prouver ma valeur.
+                On dit d’un recruteur que suite au grand nombre de candidatures qu’il reçoit ce dernier ne passe qu’environ une quarantaine de seconde à parcourir ce dernier avant de passer au suivant mais je vais passer outre ce fait . Pourquoi ? La recherche d’un alternant est différente car c’est un mode d’offre d’emploi destiné à faire monter en compétence une personne et qui souvent décline sur une embauche interne dans l’entreprise formatrice surtout en apprentissage d’où la nécessité de se présenter succinctement.
+                <br><br>
+                Ayant récemment terminé une formation de Développeur PHP/Symfony en distanciel je me retrouve comme beaucoup dans un marché saturé à souhait de junior car la demande est incapable de couvrir l’offre.
+                <br><br>
+                Se démarquer lorsqu’on manque de compétences est difficile mais pas impossible cela nécessite tout simplement du temps. En ai-je beaucoup à ma disposition ? Non.
+                <br><br>
+                Ainsi en dépit des bases que j’ai pu acquérir (aller sur mon github pour vous faire votre propre jugement) quelqu’un m’a fait remarquer qu’en tant que développeur il est naturellement facile de trouver la bonne entreprise… Comment ? En associant simplement l’objectif de cette dernière à un domaine qui nous attire dans notre vie de tous les jours comme dans le domaine professionnel. J’ai donc pris le temps d’y penser et celui qui revient le plus n’est pas lié à mon dernier poste « Médiateur social » mais celui qui le précède en tant que service civique. J’aidais des personnes de tout âge, de tous bord à être un minimum indépendant dans leur démarche lorsqu’il avait besoin d’aide et je crois fortement qu’il est possible d’accomplir la même chose en tant que développeur. La question est comment ? Je ne sais pas…C’est là que vous intervenez c’est en regardant votre mission et le public vers laquelle elle est dirigée que vous pourriez potentiellement m’indiquer comment je pourrais contribuer à cette dernière en tant que développeur.
+                <br><br>
+                Dans le cas où vous seriez potentiellement intéressé à me prendre en alternance je m’engage à faire le nécessaire pour monter en compétences sur des langages de programmation qui permettent de créer des outils dans le but de lutter contre l’illectronisme.
+
             </p>
         </div>
 
