--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <section class="container-fluid" id="contact">
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12 col-xl-12" id="contact-details">
-            <h2 class="h2 text-center">Besoin de plus d'informations ?! Contactez via mon adresse e-mail:</h2>
+            <h2 class="h2 text-center">Besoin de plus d'informations ?! Contactez-moi via mon adresse e-mail:</h2>
             <a href="mailto:mdembelepro@gmail.com" class="text-center">mdembelepro@gmail.com</a>
         </div>
     </div>
