--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="col-xs-12 col-md-12 col-lg-12 col-xl-12" id="about-detail">
             <h2 class="h2"> Qui suis-je ?</h2>
             <p class="detail-paragraph text-center">Je m’appelle Dembele Mamadou , 25 ans...Pour le reste je vous laisse le loisir d'en savoir plus ci-dessous.</p>
-            <h2 class="h2"> À l'attention de l'employeur</h2>
+            <h2 class="h2"> Mon message</h2>
             <p class="detail-paragraph-2 text-center">
                 On dit d’un recruteur que suite au grand nombre de candidatures qu’il reçoit ce dernier ne passe qu’environ une quarantaine de seconde à parcourir ce dernier avant de passer au suivant mais je vais passer outre ce fait . Pourquoi ? La recherche d’un alternant est différente car c’est un mode d’offre d’emploi destiné à faire monter en compétence une personne et qui souvent décline sur une embauche interne dans l’entreprise formatrice surtout en apprentissage d’où la nécessité de se présenter succinctement.
                 <br><br>
